--- a/ModelTraining/es.ipynb
+++ b/ModelTraining/es.ipynb
@@ -12,11 +12,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Class Definition for SVM"
+   ]
   },
   {
    "cell_type": "code",
@@ -204,6 +204,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -234,108 +241,6 @@
     "\n",
     "dataset = balanced_dataset\n",
     "dataset.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pregnancies</th>\n",
-       "      <th>Glucose</th>\n",
-       "      <th>BloodPressure</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Outcome</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.032014</td>\n",
-       "      <td>0.571256</td>\n",
-       "      <td>0.642463</td>\n",
-       "      <td>0.753782</td>\n",
-       "      <td>0.259486</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-1.195383</td>\n",
-       "      <td>-0.061250</td>\n",
-       "      <td>0.133807</td>\n",
-       "      <td>0.473022</td>\n",
-       "      <td>1.579909</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.613699</td>\n",
-       "      <td>0.902569</td>\n",
-       "      <td>0.235538</td>\n",
-       "      <td>-0.764877</td>\n",
-       "      <td>-0.620796</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-1.195383</td>\n",
-       "      <td>-1.235904</td>\n",
-       "      <td>-0.273118</td>\n",
-       "      <td>0.409212</td>\n",
-       "      <td>-1.148965</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.032014</td>\n",
-       "      <td>-0.302205</td>\n",
-       "      <td>0.133807</td>\n",
-       "      <td>-0.471355</td>\n",
-       "      <td>1.051740</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Pregnancies   Glucose  BloodPressure       BMI       Age  Outcome\n",
-       "0    -0.032014  0.571256       0.642463  0.753782  0.259486        1\n",
-       "1    -1.195383 -0.061250       0.133807  0.473022  1.579909        1\n",
-       "2    -0.613699  0.902569       0.235538 -0.764877 -0.620796        1\n",
-       "3    -1.195383 -1.235904      -0.273118  0.409212 -1.148965        0\n",
-       "4    -0.032014 -0.302205       0.133807 -0.471355  1.051740        1"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.head()"
    ]
   },
   {
@@ -793,6 +698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -842,6 +754,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -862,58 +781,18 @@
     "test_accuracy = np.average(y_test_pred == y_test)\n",
     "train_accuracy = np.average(y_pred == y_train)\n",
     "print(f\"Train = {train_accuracy}, Test = {test_accuracy}\")\n",
-    "# Precision, Recall, F1 for train\n",
+    "\n",
     "train_precision = precision_score(y_train, y_pred)\n",
     "train_recall = recall_score(y_train, y_pred)\n",
     "train_f1 = f1_score(y_train, y_pred)\n",
     "\n",
-    "# Precision, Recall, F1 for test\n",
+    "\n",
     "test_precision = precision_score(y_test, y_test_pred)\n",
     "test_recall = recall_score(y_test, y_test_pred)\n",
     "test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "print(f\"Train Precision: {train_precision}, Train Recall: {train_recall}, Train F1: {train_f1}\")\n",
     "print(f\"Test Precision: {test_precision}, Test Recall: {test_recall}, Test F1: {test_f1}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.25882789 2.25793911 6.64460644 0.9452097  2.28413471]]\n",
-      "Predictions: [1.]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\rohan\\anaconda3\\envs\\cuda_env\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "\n",
-    "\n",
-    "with open('svm.pkl', 'rb') as file:\n",
-    "    svm2 = pickle.load(file)\n",
-    "\n",
-    "with open('scaler.pkl', 'rb') as file:\n",
-    "    scaler2 = pickle.load(file)\n",
-    "\n",
-    "vector = np.array([5, 200, 200, 40, 60]).reshape(1, -1)\n",
-    "vector = scaler2.transform(vector)\n",
-    "print(vector)\n",
-    "predictions = np.array([np.sign(svm2.predict(vector))])\n",
-    "print(\"Predictions:\", predictions)"
    ]
   },
   {
@@ -942,7 +821,7 @@
     "cm_train = confusion_matrix(y_train, y_pred)\n",
     "cm_test = confusion_matrix(y_test, y_test_pred)\n",
     "\n",
-    "# Plot confusion matrix for training set\n",
+    "\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -951,7 +830,6 @@
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "\n",
-    "# Plot confusion matrix for test set\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.heatmap(cm_test, annot=True, fmt='d', cmap='Blues', xticklabels=['Predicted -1', 'Predicted 1'], yticklabels=['Actual -1', 'Actual 1'])\n",
     "plt.title('Confusion Matrix - Test Set')\n",
@@ -961,26 +839,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "sns.heatmap(cm_test, annot=True, fmt='d', cmap='Blues', xticklabels=['Predicted -1', 'Predicted 1'], yticklabels=['Actual -1', 'Actual 1'])\n",
-    "plt.title('Confusion Matrix - Test Set')\n",
-    "plt.xlabel('Predicted')\n",
-    "plt.ylabel('Actual')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1017,7 +875,6 @@
     "\n",
     "print(np.array(train_losses).shape, np.array(test_losses).shape)\n",
     "\n",
-    "# Plot accuracies\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -1029,7 +886,7 @@
     "plt.title('Training and Test Accuracy vs Epochs')\n",
     "plt.legend()\n",
     "\n",
-    "# Plot losses\n",
+    "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(epoches[::step], train_losses[::step], label='Train Loss')\n",
     "plt.plot(epoches[::step], test_losses[::step], label='Test Loss')\n",
@@ -1060,6 +917,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Grid Search"
    ]
   },
   {
@@ -1112,7 +976,7 @@
     }
    ],
    "source": [
-    "C = [0.8, 0.9, 1.0, 1.1, 1.2]\n",
+    "C = [0.8, 0.9, 1.0, 1.1]\n",
     "gamma = [0.7, 0.8, 0.9, 1.0, 1.1]\n",
     "vals = []\n",
     "for c in C:\n",
@@ -1194,6 +1058,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -1206,6 +1075,13 @@
     "\n",
     "with open('scaler.pkl', 'wb') as f:\n",
     "    pickle.dump(scaler, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "playaround"
    ]
   },
   {
