--- a/ModelTraining/es.ipynb
+++ b/ModelTraining/es.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "        else:\n",
     "            return abs(g) > 1e-5\n",
     "        \n",
-    "    def violatingIndices(self):\n",
+    "    def violatingIndices(self, a = None):\n",
     "        violaters = []\n",
     "        errorsViolaters = []\n",
     "\n",
@@ -91,6 +91,8 @@
     "        errorsNonViolaters = []\n",
     "\n",
     "        for i in range(self.n):\n",
+    "            if i == a:\n",
+    "                continue\n",
     "            if self.violatesKKT(i):\n",
     "                violaters.append(i)\n",
     "                errorsViolaters.append(self.predict(self.X[:, i]) - self.y[i])\n",
@@ -138,6 +140,7 @@
     "            self.fit(X, y, C, tol, kernel, gamma)\n",
     "\n",
     "        epoches = []\n",
+    "        breakOff = False\n",
     "\n",
     "\n",
     "        for _ in range(maxIter):\n",
@@ -157,8 +160,19 @@
     "\n",
     "\n",
     "            eta = 2 * K_ij - K_ii - K_jj\n",
-    "            if eta >= 0:\n",
-    "                continue\n",
+    "            while eta >= 0:\n",
+    "                i, j = self.violatingIndices(i)\n",
+    "                if i is None or j is None:\n",
+    "                    breakOff = True\n",
+    "                    break\n",
+    "                K_ii = self.kernel(self.X[:, i], self.X[:, i])\n",
+    "                K_jj = self.kernel(self.X[:, j], self.X[:, j])\n",
+    "                K_ij = self.kernel(self.X[:, i], self.X[:, j])\n",
+    "\n",
+    "                eta = 2 * K_ij - K_ii - K_jj\n",
+    "\n",
+    "            if breakOff:\n",
+    "                break\n",
     "\n",
     "\n",
     "            E_i = self.predict(self.X[:, i]) - self.y[i]\n",
